Multiple games, upgrades

--- a/templates/game.html
+++ b/templates/game.html
@@ -15,8 +15,9 @@
 <body>
 <button type="submit" id="resetButton" class="button enterButton" onclick="resetGame()">RESET GAME</button>
 <div id="main-title">
-    Player <label id="playerNumber"></label> &nbsp&nbsp&nbsp&nbsp
-    Points: <label id="points"></label> &nbsp&nbsp&nbsp&nbsp
+    Player <label id="playerNumber"></label> &nbsp&nbsp&nbsp
+    Points: <label id="points"></label> &nbsp&nbsp&nbsp
+    Opp: <label id="pointsOpponent"></label> &nbsp&nbsp&nbsp
     Action: <label id="action"></label> 
 </div>
 <div id="bidSection">
