--- a/templates/game.html
+++ b/templates/game.html
@@ -21,12 +21,12 @@
     Action: <label id="action"></label> 
 </div>
 <div id="bidSection">
+  <label>Highest bidder: </label> <label id="highestBidder"></label>&nbsp&nbsp&nbsp
+  <label>Highest bid: </label><label id="highestBid"></label> <br><br>
   <label for="bidAmount">Bid:</label>
-  <input type="number" id="bidAmount" name="bidAmount" min="80" max="300" step="5">
+  <select id="bidAmount"></select>
   <button type="submit" class="button enterButton" onclick="bid()">BID</button> 
   <button type="submit" class="button enterButton" onclick="passBid()">PASS</button> 
-  <label>Highest bidder: </label> <label id="highestBidder"></label>&nbsp&nbsp
-  <label>Highest bid: </label><label id="highestBid"></label>
   <br>
 </div>
 <div>
