Bold player's turn

--- a/templates/game.html
+++ b/templates/game.html
@@ -43,19 +43,19 @@
 </div>
 <div id="played">
   <div class="playedCardContainer">
-    <label class="playerLabel">Player 1</label> <br>
+    <label id="playerLabel1" class="playerLabel">Player 1</label> <br>
     <button id="player1Card" class="playedCard"></button>
   </div>
   <div class="playedCardContainer">
-    <label class="playerLabel">Player 2</label> <br>
+    <label id="playerLabel2" class="playerLabel">Player 2</label> <br>
     <button id="player2Card" class="playedCard"></button>
   </div>
   <div class="playedCardContainer">
-    <label class="playerLabel">Player 3</label> <br>
+    <label id="playerLabel3" class="playerLabel">Player 3</label> <br>
     <button id="player3Card" class="playedCard"></button>
   </div>
   <div class="playedCardContainer">
-    <label class="playerLabel">Player 4</label> <br>
+    <label id="playerLabel4" class="playerLabel">Player 4</label> <br>
     <button id="player4Card" class="playedCard"></button>
   </div>
 </div>
