Messages for game master

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,8 @@
     <button class="center" type="submit" class="button" onclick="createGame()">Create Game</button>
     <br>
     <button class="center" type="submit" class="button" onclick="deleteGame()">Delete Game</button>
+    <br> <br>
+    <label id="message" class="center"></label>
 </div>
 </body>
 
