Player name functionality

--- a/templates/game.html
+++ b/templates/game.html
@@ -43,25 +43,29 @@
 </div>
 <div id="played">
   <div class="playedCardContainer">
-    <label id="playerLabel1" class="playerLabel">Player 1</label> <br>
+    <label id="playerLabel1" class="playerLabel">Player 1</label>
+    <label id="playerName1" class="playerLabel"></label>
     <button id="player1Card" class="playedCard"></button>
   </div>
   <div class="playedCardContainer">
-    <label id="playerLabel2" class="playerLabel">Player 2</label> <br>
+    <label id="playerLabel2" class="playerLabel">Player 2</label>
+    <label id="playerName2" class="playerLabel"></label>
     <button id="player2Card" class="playedCard"></button>
   </div>
   <div class="playedCardContainer">
-    <label id="playerLabel3" class="playerLabel">Player 3</label> <br>
+    <label id="playerLabel3" class="playerLabel">Player 3</label>
+    <label id="playerName3" class="playerLabel"></label>
     <button id="player3Card" class="playedCard"></button>
   </div>
   <div class="playedCardContainer">
-    <label id="playerLabel4" class="playerLabel">Player 4</label> <br>
+    <label id="playerLabel4" class="playerLabel">Player 4</label>
+    <label id="playerName4" class="playerLabel"></label>
     <button id="player4Card" class="playedCard"></button>
   </div>
 </div>
 <br>
 <div id="hand">
-  <label>Hand:</label>
+  <label style="display: block; padding: 10px;">Hand:</label>
   <div class="cardRow" id="blackCards"></div>
   <div class="cardRow" id="greenCards"></div>
   <div class="cardRow" id="redCards"></div>
