--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,12 @@
       <option value="4">Player 4</option>
     </select>
     <br>
+    <input id="playerName" class="center" placeholder="Your Name" maxlength="12">
+    <br>
     <input id="gameKey" class="center" placeholder="Game Key">
     <br>
     <button class="center" type="submit" class="button" onclick="enterGame()">Enter Game</button>
+    <br>
     <br>
     <br>
     <input id="gameMasterPassword" class="center" type="password" placeholder="Game Master Password">
